--- a/Lucuber/ViewControllers/Timer/Timer.storyboard
+++ b/Lucuber/ViewControllers/Timer/Timer.storyboard
@@ -261,10 +261,106 @@
             </objects>
             <point key="canvasLocation" x="2247" y="660"/>
         </scene>
+        <!--New Score Group View Controller-->
+        <scene sceneID="jYb-aV-Qji">
+            <objects>
+                <viewController storyboardIdentifier="NewScoreGroupViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="xDi-vS-tD7" customClass="NewScoreGroupViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EUW-Ga-Knh"/>
+                        <viewControllerLayoutGuide type="bottom" id="FLS-xu-3am"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="viE-XN-blw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="new_score_group_popover" translatesAutoresizingMaskIntoConstraints="NO" id="BBD-ft-Sd3">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rFm-h0-9Wl">
+                                <rect key="frame" x="0.0" y="96" width="414" height="630"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="WdS-fu-dvX" customClass="CategoryCell" customModule="Lucuber" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WdS-fu-dvX" id="GAh-tT-5Zs">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skill_bubble" translatesAutoresizingMaskIntoConstraints="NO" id="zMH-nh-a62">
+                                                    <rect key="frame" x="173.66666666666666" y="9.6666666666666643" width="68" height="24"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3x3x3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1L-IK-Q23">
+                                                    <rect key="frame" x="183.66666666666666" y="11.333333333333336" width="48" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zMH-nh-a62" firstAttribute="centerY" secondItem="GAh-tT-5Zs" secondAttribute="centerY" id="6IB-vB-kRU"/>
+                                                <constraint firstItem="zMH-nh-a62" firstAttribute="leading" secondItem="A1L-IK-Q23" secondAttribute="leading" constant="-10" id="7W7-NG-sTh"/>
+                                                <constraint firstItem="A1L-IK-Q23" firstAttribute="centerX" secondItem="GAh-tT-5Zs" secondAttribute="centerX" id="9fP-H0-FBs"/>
+                                                <constraint firstItem="zMH-nh-a62" firstAttribute="trailing" secondItem="A1L-IK-Q23" secondAttribute="trailing" constant="10" id="BZh-pI-4zV"/>
+                                                <constraint firstItem="A1L-IK-Q23" firstAttribute="centerY" secondItem="GAh-tT-5Zs" secondAttribute="centerY" id="U5h-sG-BbW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <outlet property="categoryLabel" destination="A1L-IK-Q23" id="4zJ-iy-Poi"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="xDi-vS-tD7" id="1nX-xr-375"/>
+                                    <outlet property="delegate" destination="xDi-vS-tD7" id="CeP-Ry-VFU"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择新分组的类型" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGB-HR-Hk1">
+                                <rect key="frame" x="0.0" y="50" width="414" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hCw-sq-iJJ" userLabel="lineView">
+                                <rect key="frame" x="0.0" y="95" width="414" height="1"/>
+                                <color key="backgroundColor" red="0.73725490196078436" green="0.73333333333333328" blue="0.75294117647058822" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="U8T-PH-5Rx"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="CGB-HR-Hk1" firstAttribute="leading" secondItem="viE-XN-blw" secondAttribute="leading" id="0mH-mV-POo"/>
+                            <constraint firstItem="BBD-ft-Sd3" firstAttribute="leading" secondItem="viE-XN-blw" secondAttribute="leading" id="4CZ-yW-YH8"/>
+                            <constraint firstItem="rFm-h0-9Wl" firstAttribute="leading" secondItem="viE-XN-blw" secondAttribute="leading" id="9xd-nU-8Rq"/>
+                            <constraint firstItem="hCw-sq-iJJ" firstAttribute="leading" secondItem="viE-XN-blw" secondAttribute="leading" id="Ceh-hq-gQd"/>
+                            <constraint firstItem="BBD-ft-Sd3" firstAttribute="top" secondItem="viE-XN-blw" secondAttribute="top" id="G6X-No-0J9"/>
+                            <constraint firstAttribute="trailing" secondItem="BBD-ft-Sd3" secondAttribute="trailing" id="SbM-jn-BhA"/>
+                            <constraint firstItem="FLS-xu-3am" firstAttribute="top" secondItem="rFm-h0-9Wl" secondAttribute="bottom" constant="10" id="SxP-3j-jdr"/>
+                            <constraint firstItem="rFm-h0-9Wl" firstAttribute="top" secondItem="hCw-sq-iJJ" secondAttribute="bottom" id="XWc-g9-qhc"/>
+                            <constraint firstAttribute="trailing" secondItem="hCw-sq-iJJ" secondAttribute="trailing" id="hTx-l6-3at"/>
+                            <constraint firstItem="FLS-xu-3am" firstAttribute="top" secondItem="BBD-ft-Sd3" secondAttribute="bottom" id="kbF-Lj-CnK"/>
+                            <constraint firstAttribute="trailing" secondItem="CGB-HR-Hk1" secondAttribute="trailing" id="n6j-W1-vra"/>
+                            <constraint firstAttribute="trailing" secondItem="rFm-h0-9Wl" secondAttribute="trailing" id="s6Q-bv-HwV"/>
+                            <constraint firstItem="rFm-h0-9Wl" firstAttribute="top" secondItem="CGB-HR-Hk1" secondAttribute="bottom" constant="25" id="sDw-eI-19A"/>
+                            <constraint firstItem="CGB-HR-Hk1" firstAttribute="top" secondItem="EUW-Ga-Knh" secondAttribute="bottom" constant="30" id="tha-JZ-Cal"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="rFm-h0-9Wl" id="rvM-57-gOU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G6w-o3-j5S" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3860.8695652173915" y="659.51086956521749"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ios-refresh-empty" width="36" height="43"/>
         <image name="loading" width="414" height="45"/>
+        <image name="new_score_group_popover" width="67" height="70"/>
+        <image name="skill_bubble" width="55" height="24"/>
         <image name="tabbar_time" width="28" height="30"/>
         <image name="tabbar_time_sele" width="28" height="30"/>
     </resources>
