--- a/Lucuber/Base.lproj/Result.storyboard
+++ b/Lucuber/Base.lproj/Result.storyboard
@@ -16,7 +16,7 @@
                     <toolbarItems/>
                     <nil key="simulatedTopBarMetrics"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3KM-a9-66C">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="3KM-a9-66C">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -47,42 +47,37 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AB9-9h-p3D">
                                         <rect key="frame" x="0.0" y="-20" width="375" height="100"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15.63" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cY3-TB-WZK">
-                                                <rect key="frame" x="257.5" y="29" width="97.5" height="42"/>
-                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="35"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SUB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14o-yS-BfI">
-                                                <rect key="frame" x="294.5" y="69" width="24.5" height="14.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="15.63" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cY3-TB-WZK">
+                                                <rect key="frame" x="244" y="40" width="111" height="48"/>
+                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3x3x3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KeX-7f-EhX">
-                                                <rect key="frame" x="20" y="29" width="61" height="24"/>
+                                                <rect key="frame" x="20" y="40" width="61" height="24"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016/12/21 - 2016/12/26" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8K-wu-LNw">
-                                                <rect key="frame" x="20" y="58" width="158.5" height="17"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016/12/21 - 2016/12/26" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="b8K-wu-LNw">
+                                                <rect key="frame" x="20" y="69" width="139" height="14.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstItem="cY3-TB-WZK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="b8K-wu-LNw" secondAttribute="trailing" constant="20" id="2Pt-RU-aBe"/>
                                             <constraint firstAttribute="height" constant="100" id="4To-HD-yQF"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="cY3-TB-WZK" secondAttribute="bottom" constant="10" id="J9J-5C-9hM"/>
                                             <constraint firstItem="KeX-7f-EhX" firstAttribute="leading" secondItem="AB9-9h-p3D" secondAttribute="leading" constant="20" id="RjM-SA-onP"/>
-                                            <constraint firstItem="14o-yS-BfI" firstAttribute="top" secondItem="cY3-TB-WZK" secondAttribute="bottom" constant="-2" id="VH8-68-24U"/>
+                                            <constraint firstItem="KeX-7f-EhX" firstAttribute="top" secondItem="AB9-9h-p3D" secondAttribute="top" constant="40" id="Vd6-ys-oV5"/>
                                             <constraint firstItem="KeX-7f-EhX" firstAttribute="top" secondItem="cY3-TB-WZK" secondAttribute="top" id="YLW-6v-bsO"/>
                                             <constraint firstItem="b8K-wu-LNw" firstAttribute="leading" secondItem="KeX-7f-EhX" secondAttribute="leading" id="dZJ-dr-u5o"/>
                                             <constraint firstItem="b8K-wu-LNw" firstAttribute="top" secondItem="KeX-7f-EhX" secondAttribute="bottom" constant="5" id="hhm-be-k1Q"/>
-                                            <constraint firstItem="14o-yS-BfI" firstAttribute="centerX" secondItem="cY3-TB-WZK" secondAttribute="centerX" id="ltl-X4-b2H"/>
+                                            <constraint firstItem="cY3-TB-WZK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="KeX-7f-EhX" secondAttribute="trailing" constant="20" id="mzT-ba-jLb"/>
                                             <constraint firstAttribute="trailing" secondItem="cY3-TB-WZK" secondAttribute="trailing" constant="20" id="pzc-2t-DDO"/>
-                                            <constraint firstItem="cY3-TB-WZK" firstAttribute="centerY" secondItem="AB9-9h-p3D" secondAttribute="centerY" id="vKZ-JR-GWm"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bhl-Sp-vTH" customClass="ScrollableGraphView" customModule="ScrollableGraphView">
@@ -110,7 +105,7 @@
                                 </connections>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fin-WF-NqE">
-                                <rect key="frame" x="0.0" y="330" width="375" height="288"/>
+                                <rect key="frame" x="0.0" y="320" width="375" height="347"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="6gY-b2-8ze" id="o63-1h-VZe"/>
@@ -118,31 +113,31 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jiK-m6-w00">
-                                <rect key="frame" x="0.0" y="290" width="375" height="40"/>
+                                <rect key="frame" x="0.0" y="290" width="375" height="30"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="J4J-ea-kX0">
-                                        <rect key="frame" x="0.0" y="0.0" width="315" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="315" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日期" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uc5-fq-3sj">
-                                                <rect key="frame" x="0.0" y="0.0" width="79" height="40"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="79" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最快" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCs-8g-fAi">
-                                                <rect key="frame" x="79" y="0.0" width="78.5" height="40"/>
+                                                <rect key="frame" x="79" y="0.0" width="78.5" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最慢" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugr-FK-g4t">
-                                                <rect key="frame" x="157.5" y="0.0" width="79" height="40"/>
+                                                <rect key="frame" x="157.5" y="0.0" width="79" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="次数" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VaD-Rv-EbK">
-                                                <rect key="frame" x="236.5" y="0.0" width="78.5" height="40"/>
+                                                <rect key="frame" x="236.5" y="0.0" width="78.5" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -161,11 +156,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fin-WF-NqE" firstAttribute="top" secondItem="ta6-33-5P4" secondAttribute="bottom" constant="40" id="7I6-yN-Fji"/>
+                            <constraint firstItem="fin-WF-NqE" firstAttribute="top" secondItem="ta6-33-5P4" secondAttribute="bottom" constant="30" id="7I6-yN-Fji"/>
                             <constraint firstItem="fin-WF-NqE" firstAttribute="leading" secondItem="IHy-QO-oHT" secondAttribute="leading" id="D0i-Az-Jmr"/>
+                            <constraint firstAttribute="bottom" secondItem="fin-WF-NqE" secondAttribute="bottom" id="EI9-nA-KKW"/>
                             <constraint firstAttribute="trailing" secondItem="ta6-33-5P4" secondAttribute="trailing" id="MCZ-LL-x0r"/>
                             <constraint firstItem="ta6-33-5P4" firstAttribute="top" secondItem="cyQ-zD-akO" secondAttribute="bottom" id="QUY-mf-C5b"/>
-                            <constraint firstItem="gRN-Nl-V7b" firstAttribute="top" secondItem="fin-WF-NqE" secondAttribute="bottom" id="Rf0-2I-Afu"/>
                             <constraint firstItem="jiK-m6-w00" firstAttribute="leading" secondItem="IHy-QO-oHT" secondAttribute="leading" id="Sl7-bB-SIT"/>
                             <constraint firstAttribute="trailing" secondItem="fin-WF-NqE" secondAttribute="trailing" id="biS-cM-F24"/>
                             <constraint firstItem="fin-WF-NqE" firstAttribute="top" secondItem="jiK-m6-w00" secondAttribute="bottom" id="exJ-Qo-ZKJ"/>
