--- a/Lucuber/ViewControllers/Result/ScoreGroupCell.xib
+++ b/Lucuber/ViewControllers/Result/ScoreGroupCell.xib
@@ -10,58 +10,79 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="ScoreGroupCell" customModule="Lucuber" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="359" height="50"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" rowHeight="52" id="KGk-i7-Jjw" customClass="ScoreGroupCell" customModule="Lucuber" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="424" height="52"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="359" height="49.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="424" height="51"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Lm3-mU-ef6">
-                        <rect key="frame" x="0.0" y="0.0" width="299" height="49"/>
+                        <rect key="frame" x="0.0" y="0.0" width="364" height="51"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/21" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJX-Ok-siP">
-                                <rect key="frame" x="0.0" y="0.0" width="75" height="49"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/21" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="LJX-Ok-siP">
+                                <rect key="frame" x="0.0" y="0.0" width="91" height="51"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12.35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQS-fY-Mbj">
-                                <rect key="frame" x="75" y="0.0" width="74.5" height="49"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12.35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="PQS-fY-Mbj">
+                                <rect key="frame" x="91" y="0.0" width="91" height="51"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16.21" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bGU-7U-sse">
-                                <rect key="frame" x="149.5" y="0.0" width="75" height="49"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16.21" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="bGU-7U-sse">
+                                <rect key="frame" x="182" y="0.0" width="91" height="51"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PdX-2t-4Ry">
-                                <rect key="frame" x="224.5" y="0.0" width="74.5" height="49"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="PdX-2t-4Ry">
+                                <rect key="frame" x="273" y="0.0" width="91" height="51"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZC5-1A-1t5">
+                        <rect key="frame" x="374" y="10" width="40" height="31"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="0VS-wD-jKe"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <state key="normal" title="详情" backgroundImage="detail_button_empty">
+                            <color key="titleColor" red="0.1960784314" green="0.65490196079999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </state>
+                        <state key="disabled" backgroundImage="detail_button_empty_gray">
+                            <color key="titleColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                    </button>
                 </subviews>
-                <color key="backgroundColor" red="0.97647058823529409" green="0.98431372549019602" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
+                    <constraint firstItem="ZC5-1A-1t5" firstAttribute="leading" secondItem="Lm3-mU-ef6" secondAttribute="trailing" constant="10" id="1bM-Rh-cKw"/>
+                    <constraint firstAttribute="trailing" secondItem="ZC5-1A-1t5" secondAttribute="trailing" constant="10" id="KtJ-tg-Yj9"/>
                     <constraint firstAttribute="bottom" secondItem="Lm3-mU-ef6" secondAttribute="bottom" id="R2l-Bh-qtG"/>
                     <constraint firstItem="Lm3-mU-ef6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SpO-se-S2A"/>
                     <constraint firstItem="Lm3-mU-ef6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="YA7-Zb-SPL"/>
-                    <constraint firstAttribute="trailing" secondItem="Lm3-mU-ef6" secondAttribute="trailing" constant="60" id="fhe-xj-SkR"/>
+                    <constraint firstAttribute="bottom" secondItem="ZC5-1A-1t5" secondAttribute="bottom" constant="10" id="iW9-Jb-5xx"/>
+                    <constraint firstItem="ZC5-1A-1t5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="xdP-k1-hnM"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="countLabel" destination="PdX-2t-4Ry" id="PiZ-EN-1sw"/>
                 <outlet property="dateLabel" destination="LJX-Ok-siP" id="lkj-pU-kYj"/>
+                <outlet property="detailButton" destination="ZC5-1A-1t5" id="6RM-At-F8O"/>
                 <outlet property="fastestLabel" destination="PQS-fY-Mbj" id="6P4-ts-PoJ"/>
                 <outlet property="slowliestLabel" destination="bGU-7U-sse" id="kAj-QK-M8x"/>
             </connections>
-            <point key="canvasLocation" x="53.5" y="57"/>
+            <point key="canvasLocation" x="86" y="58"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="detail_button_empty" width="51" height="30"/>
+        <image name="detail_button_empty_gray" width="51" height="30"/>
+    </resources>
 </document>
